# snoonu-mcp-server

./: .env.example  .gitignore  Dockerfile  cli.py  docker-compose.yml  pyproject.toml  server.json
.claude/commit-message/: SKILL.MD
.claude/pr-review/: SKILL.MD
.github/workflows/: deploy.yml
deploy/gcloud/: deploy.sh  service.yaml.tpl
docs/: architecture.md
monitoring/grafana/dashboards/: snoonu-mcp.json
src/: activity_log.py  cache.py  client.py  middleware.py  order_rate_limit.py  secrets.py  server.py  well_known.py
src/static/: mcp.json
src/tools/: categories.py  delivery.py  orders.py  products.py
tests/: conftest.py
tests/integration/: test_categories_repo.py  test_cities_repo.py  test_order_repo_roundtrip.py  test_orders_repo.py  test_products_repo.py
tests/unit/: test_cache.py  test_delivery_tool.py  test_metrics.py  test_order_rate_limit.py  test_orders_tool.py  test_server_endpoints.py
