[project]
name = "snoonu-mcp"
version = "0.1.0"
description = "Mock MCP server exposing Snoonu's catalog/delivery/order tools for LLM agents."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "faker>=24.0",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "requests>=2.31",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "fakeredis>=2.20"]
gcp = ["google-cloud-secret-manager>=2.20"]
load = ["locust>=2.30"]

[tool.pytest.ini_options]
markers = [
    "integration: hits a real seeded Postgres database",
    "e2e: hits a live running server over HTTP/MCP",
]